Implemented admin panel pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,12 @@ body,
   width: 100%;
 }
 
+.sheet button svg {
+  color: white;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
